<resources>
    <string name="app_name">App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="regis2">REGISTER</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="the_app_still_in_development">The App Still in Development</string>
    <string name="im_sad">Im Sad</string>
    <string name="niggbutton">NIGGBUTTON</string>
    <string name="this_is_my_girlfriend">This Is My Girlfriend</string>
</resources>